# shazam-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
shazam_cli/: __init__.py
