[project]
name = "shazam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "click>=8.3.3",
    "mutagen>=1.47.0",
    "shazamio>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shazam_cli"]

[project.scripts]
shazam = "shazam_cli:cli"
